# agimon

./: .gitignore  LICENSE  README.md  agimon  app.py  daemons  install-sketchybar.sh  leads.duckdb  menubar.py  orchestrator.py  procs  requirements.txt  run-menubar.sh  run.sh  start.command
collectors/: cache.py  cost_predictor.py  costs.py  ghostty.py  llm.py  mlx_router.py  network.py  processes.py  procs.py  qdrant_store.py  sessions.py  telepathy.py  watchdog.py  windows.py
core/: Cargo.toml
core/.cargo/: config.toml
core/src/: main.rs
hooks/: auto_index.sh
native/: agimon-menu  debug_ipc.swift  menubar.swift  test_menu.swift
native/AGIMON.app/Contents/: Info.plist
native/AGIMON.app/Contents/MacOS/: agimon-menu
native/AGIMON.app/Contents/Resources/: AppIcon.icns
raycast-extension/: package-lock.json  package.json
raycast-extension/src/: live.tsx  menubar.tsx  network.tsx  sessions.tsx
sketchybar/: sketchybarrc
sketchybar/plugins/: claude_status.sh  costs.sh  network.sh  qdrant.sh  tunnels.sh
